--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://stage.chatmosphere.cc",
+  "homepage": "https://hybi-galaxy.netlify.app",
   "name": "react-app",
   "version": "0.6.0",
   "private": true,
