--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-zoom-pan-pinch": "^2.1.1",
+    "screenfull": "^5.1.0",
     "simple-zustand-devtools": "^1.0.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.3",
