--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "react-select": "^4.3.1",
     "react-zoom-pan-pinch": "^2.1.1",
     "screenfull": "^5.1.0",
     "simple-zustand-devtools": "^1.0.0",
