--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@storybook/node-logger": "^6.1.18",
     "@storybook/preset-create-react-app": "^3.1.6",
     "@storybook/react": "^6.1.18",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "react-modal": "^3.14.4"
   }
 }
