--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "name": "react-app",
   "version": "0.6.0",
   "private": true,
+  "engines": {
+    "node": "15.14.0"
+  },
   "dependencies": {
-    "@sentry/react": "^6.14.3",
+    "@sentry/react": "^6.16.1",
     "@sentry/tracing": "^6.14.3",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
@@ -26,7 +29,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-select": "^4.3.1",
-    "react-zoom-pan-pinch": "^2.1.1",
+    "react-zoom-pan-pinch": "^2.1.3",
     "screenfull": "^5.1.0",
     "simple-zustand-devtools": "^1.0.0",
     "styled-components": "^5.2.1",
