--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,7 @@ HTTPS=true
 HOST=localhost
 SSL_CRT_FILE=./.cert/cert.pem
 SSL_KEY_FILE=./.cert/key.pem
+REACT_APP_WHITEBOARD_URL=
+REACT_APP_ANNOUNCEMENT_HEADLINE=Text
+REACT_APP_ANNOUNCEMENT_EMBED_VIDEO_URL=YouTubeEmbedUrl
+REACT_APP_ANNOUNCEMENT_TEXT=Custom TEext
